# libigl-example-project

./: CMakeLists.txt  README.md  cleanup.cpp  main.cpp
